--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Número Aleatorio</title>
-    <link rel="stylesheet" href="./style-index/style.css">
+    <link rel="stylesheet" href="style-index/style.css">
 
  
     
@@ -17,7 +17,7 @@
       <li id="cabecera">El número sea más bajo del que la calculadora piensa </li>
       <p id="cabecera">Además el juego incluye un cronometro para intentar sacar la solución correcta en menos de dos minutos </p>
     <div id="caja">
-       <form action="/juego/juego.html" method="get">
+       <form action="juego/juego.html" method="get">
         <input type="submit" value="Comenzar">
        </form>
         
