--- a/juego/juego.html
+++ b/juego/juego.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Número Aleatorio</title>
-    <link rel="stylesheet" href="./juego-css/style-juego.css">
+    <link rel="stylesheet" href="juego-css/style-juego.css">
 </head>
 <body>
     <div id="calculator">
@@ -21,9 +21,9 @@
 </form>
 </div>
 
-<audio id="myAudio" src="/audio1.mp3" preload="auto"></audio>
+<audio id="myAudio" src="audio1.mp3" preload="auto"></audio>
 
-<script src="/juego/js/java.js"></script>
+<script src="juego/js/java.js"></script>
    
    
    
